backend: setting up JWT in created an logged users
