# packages/backend/openapi.json
@@ -254,6 +254,20 @@
           "Auth"
         ]
       }
+    },
+    "/api/v1/auth/private": {
+      "get": {
+        "operationId": "AuthController_testingPrivateRoute",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "Auth"
+        ]
+      }
     }
   },
   "info": {
